stylesheet/styles.css
body {
    display: flex; 
    flex-direction: column;
    padding: auto;
    margin: 0;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

/* Styles For First Section*/

.header {
    background-color: #1F2937;
    width: 1880px;
    padding: 20px;
    margin: 0px;    
}

.margin {
   margin: auto 300px;
}

.logo {
    font-weight: 24px;
    color: #f9faf8;
}

li {
    list-style: none;
    color: #E5E7EB;  
}

.image {
    width: 600px;
    border-radius: 10px; 
}

.head {
    display: flex;
    justify-content: space-between;
}

ul {
    display: flex;
    gap: 100px;
}

button {
    background-color: blue;
    color: white;
    padding: 8px;
    width: 80px;
    margin-top: 15px;
    border-radius: 10px;
}

 .space{
    display: flex;
    justify-content: space-between;
    margin-top: 45px;

}

.text-head {
    color: #E5E7EB;
    
}
.text {
    color: #E5E7EB;
    font-weight: 18px;
}

.container {
    width: 200px;
}

/* Styles For Second Section*/

.first-card, .second-card, .third-card, .fourth-card {
    width: 200px;
}

.sec-header {
    color: #1F2937;
    font-weight: bolder;
    display: flex;
    justify-content: center;

}

.card {
    border-radius: 10px;
    border-color: #3882f6;
    width: 200px;
    margin-top: 30px;
}

.section-container {
   display: flex;
   gap: 100px;
   justify-content: center;  
}

.main-container {
    background-color: #f9faf8;
    width: 1880px;
    padding: 20px;
}

/* Styles For Third Section */

.quote-container {
    background-color: #E5E7EB;
    padding: 20px;
    height: 300px;
    width: 1880px;

}

.quote {
    color: #1F2937;
    font: 36px;
    font-style: italic;
    margin: 150px;
}

/* Styles For Fourth Section */

.fourth-container {
    background-color: #ffffff;
    height: 400px;
    margin-left: 400px;
}

.fourth {
   background-color: #3882f6;
   color: #ffffff; 
   display: flex;
   flex-direction: column;
   margin: 150px;
   border-radius: 10px;
   padding: 30px;
   justify-content: center;
   align-items: center;
   width: 700px;
}

.only {
    background-color: #3882f6;
    margin-left: 80px;
}

.new {
    margin-right: 470px;
}

